package kitchenpos.domain;

public enum OrderStatus {
  WAITING, ACCEPTED, SERVED, DELIVERING, DELIVERED, COMPLETED
}
