package kitchenpos.domain;

public enum OrderType {
  DELIVERY, TAKEOUT, EAT_IN
}
